<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileTicket</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Mobile Ticket</string>
    <string name="my_tickets">My Tickets</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="plan_trip">Plan Trip</string>
    <string name="CheckIn">Check In</string>
    <string name="title_activity_my_tickets">MyTickets</string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>